# lung-detect-web

./: .gitignore  .gitmodules  README.md  README_Software.md  package-lock.json  package.json  resolve-conflicts.sh
backend/: audio_process.py  audio_process_no_json.py  calibrate.py  combine_wav.py  format_converter.py  requirements.txt  server.js
doc/: README_Hardware.md
esp/esp-lung-detect/: CMakeLists.txt  Makefile  README.md  sdkconfig.old
esp/esp-lung-detect/main/: CMakeLists.txt  lung_detect.c
piPico/: CMakeLists.txt  README.md
piPico/src/: main.cpp  pico.py
public/: index.html
src/: App.css  App.js  LungVisualization.css  config.js
src/components/: ConvertContainer.js  DataTable.js  Features.js  LungVisualization.js  MultiUploadContainer.js  NavBar.js  ThemeSwitcher.js  UploadContainer.js
src/services/: AudioPlayback.js  AudioService.js
